--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/src/index.js"
   },
@@ -13,15 +13,21 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.0.13",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.11.1",
     "ts-node": "10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.20.3",
     "typescript": "5.8.3"
   },
   "dependencies": {
     "@prisma/client": "6.11.1",
+    "argon2": "^0.43.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
     "zod": "^4.0.5"
   }
 }
