--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "tsc",
     "start": "node dist/src/index.js"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
