add: update .env.example with mail and broker configuration

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
+JWT_KEY=
 DATABASE_URL=
+
+
+# mail configuration
+MAIL_FROM=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
+
+# broker configuration
+MQTT_BROKER_URL=
