--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "typescript": "5.8.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
+    "@aws-sdk/s3-request-presigner": "^3.864.0",
     "@prisma/client": "6.11.1",
     "@types/mqtt": "^2.5.0",
     "argon2": "^0.43.1",
